scss/home--mobile.scss
html {
    font-family: 'Public Sans', sans-serif;
}

body {
    min-height: 100vh;
    background-color: #EDF3F8;
    overflow-x: hidden;
}

.header {
    @include bgImageStyles($position: center -550px);
    margin-bottom: 80px;
    padding: 40px 24px 0 24px;
    &__nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
    }
}

.mobile-menu {
    &__open-icon {
        cursor: pointer;
    }
    &__content,
    &__layer {
        width: 300px;
        height: 100vh;
        position: absolute;
        top: 0;
        right: 0;
    }
    &__content {
        background-color: #1B262F;
        padding: 48px 24px;
        transition: right 0.5s ease;
        z-index: 1;
        &--hidden {
            right: -300px;
        }
    }
    &__layer {
        @include bgImageStyles($position: -277px -550px);
        z-index: -1;
    }
    &__close-icon {
        text-align: right;
        margin-bottom: 42px;
        padding-bottom: 24px;
        border-bottom: 1px solid #404b56;
        &-svg {
            cursor: pointer;
            &:hover path{
                fill: #FBFCFE;
            }
        }
    }
    &__links {
        display: flex;
        flex-direction: column;
        margin-bottom: 32px;
        text-align: center;
    }
    &__link {
        font-size: 20px;
        font-weight: bold;
        color: #b9bec3;
        margin-bottom: 32px;
        &:hover {
            color: #FBFCFE;
        }
        &:last-of-type {
            margin-bottom: 0;
        }
    }
    &__call-to-action {
        display: block;
        text-align: center;
        @include buttonStyles();
    }
}

.desktop-menu {
    display: none;
}

.hero {
    display: flex;
    flex-direction: column;
    max-width: 400px;
    margin: 0 auto;
    text-align: center;
    &__image {
        --width: 204.34px;
        position: relative;
        width: var(--width);
        left: calc(var(--width) * 0.06);
    }
    &__content {
        margin-top: -24px;
    }
    &__headline {
        @include headlineStyles();
        margin-bottom: 24px;
    }
    &__text {
        font-size: 15px;
        color: #6C8294;
    }
    &__link {
        font-weight: bold;
        color: #6C8294;
        &:hover {
            color: #36536B;
        }
    }
}

.main {
    margin-bottom: 80px;
}

.clients {
    @include bgImageStyles($position: center -602px);
    padding: 80px 24px;
    background-color: #1B262F;
    > * {
        max-width: 367px;
        margin-left: auto;
        margin-right: auto;
    }
    &__logos {
        padding-left: 24px;
        padding-right: 24px;
        display: grid;
        align-items: center;
        grid-template-columns: repeat(2, 1fr);
        gap: 40px;
        margin-bottom: 56px;
    }
    &__logo {
        width: 100%;
        height: auto;
    }
    &__info {
        text-align: center;
    }
    &__headline {
        @include headlineStyles($color: #FBFCFE);
        margin-bottom: 16px;
    }
    &__summary {
        @include summaryStyles($color: #b8bcc0);
        margin-bottom: 32px;
    }
    &__link {
        @include buttonStyles($backgroundColor: inherit, $hoverBackgroundColor: #FBFCFE, $hoverColor: #1B262F);
        display: inline-block;
        border: 1px solid #FBFCFE;
    }
}

.benefits {
    margin-bottom: 80px;
}

.single-benefit {
    max-width: 375px;
    margin: 0 auto 48px auto;
    &__img {
        width: 410px;
    }
    &__info {
        padding: 0 24px;
        text-align: center;
    }
    &__headline {
        @include headlineStyles($fontSize: 36px);
        margin-bottom: 24px;
    }
    &__summary {
        @include summaryStyles();
    }
}

.triple-benefit {
    display: flex;
    flex-direction: column;
    padding: 32px 24px 0 24px;
    max-width: 375px;
    margin: 0 auto;
    &__wrapper {
        margin-bottom: 48px;
        text-align: center;
        &:last-of-type {
            margin-bottom: 0;
        }
    }
    &__img {
        width: auto;
        margin-bottom: 32px;
    }
    &__headline {
        font-size: 18px;
        font-weight: bold;
        line-height: 25px;
        margin-bottom: 16px;
        color: #36536B;
    }
    &__summary {
        @include summaryStyles($lineHeight: 25px);
    }
}

.call-to-action {
    text-align: center;
    padding: 0 24px;
    max-width: 375px;
    margin: 0 auto;
    &__headline {
        @include headlineStyles();
        margin-bottom: 32px;
    }
}

.footer {
    @include bgImageStyles($position: center 177px);
    background-color: #1B262F;
    padding-bottom: 55px;
    padding-top: 40px;
    &__logo {
        text-align: center;
        margin-bottom: 40px;
    }
    &__links {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-bottom: 40px;
    }
    &__link {
        margin-bottom: 30px;
        font-size: 15px;
        font-weight: bold;
        color: #b9bec3;
        &:hover {
            color: #FBFCFE;
        }
        &:last-of-type {
            margin-bottom: 0;
        }
    }
    &__social-links {
        display: flex;
        justify-content: center;
    }
    &__social-link {
        margin-right: 24px;
        &:last-of-type {
            margin-right: 0;
        }
        &-icon:hover path {
            fill: #DA6D97;
        }
    }
}

.demo-form {
    display: flex;
    flex-direction: column;
    margin-bottom: 24px;
    &__label {
        position: absolute;
        left: -100vw;
    }
    &__input {
        @include buttonStyles($color: #36536B, $backgroundColor: #FBFCFE, $hoverColor: #36536B, $hoverBackgroundColor: #FBFCFE);
        width: 100%;
        box-shadow: 10px 10px 25px -10px rgba(54, 83, 107, 0.25);
        &::placeholder {
            font-family: 'Public Sans', sans-serif;
            color: #99a7b4;
            opacity: 1;
        }
        &[type="submit"] {
            box-shadow: none;
            @include buttonStyles();
        }
    }
    &__item {
        margin-bottom: 16px;
        &:last-of-type {
            margin-bottom: 0;
        }
    }
}

